--- a/force-app/main/default/classes/Random.cls
+++ b/force-app/main/default/classes/Random.cls
@@ -1,7 +1,7 @@
 public with sharing class Random {
     
     @AuraEnabled
-    public static Integer getRandomNumber(Integer min, Integer max) {
+    public static Integer getRandomNum(Integer min, Integer max) {
         return  Integer.valueOf(Math.random() * (max - min + 1)) + min;
     }
 }
