--- a/force-app/main/default/classes/Random.cls
+++ b/force-app/main/default/classes/Random.cls
@@ -1,7 +1,17 @@
 public with sharing class Random {
     
+    private static Set<Integer> generatedNumbers = new Set<Integer>();
+    
     @AuraEnabled
     public static Integer getRandomNum(Integer min, Integer max) {
-        return  Integer.valueOf(Math.random() * (max - min + 1)) + min;
+        Integer randomNum = Integer.valueOf(Math.round(Math.random() * (max - min) + min));
+        
+        while (generatedNumbers.contains(randomNum)) {
+            randomNum = Integer.valueOf(Math.round(Math.random() * (max - min) + min));
+        }
+        
+        generatedNumbers.add(randomNum);
+        
+        return randomNum;
     }
 }
